--- a/.github/workflows/fetch_history_to_release.yml
+++ b/.github/workflows/fetch_history_to_release.yml
@@ -1,15 +1,11 @@
-name: Fetch History to Release
+name: Fetch Full History to Release
 
 on:
   workflow_dispatch:
-    inputs:
-      year_list:
-        description: 'Years (e.g. [2020, 2021])'
-        default: '[2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020,2021,2022,2023,2024,2025]'
-        required: true
+    # 不需要输入年份列表了，脚本会自动处理 2005-去年
 
 jobs:
-  # 1. 准备矩阵 (历史年份也需要分片，否则单机跑不完)
+  # 1. 准备分片矩阵 (20个任务)
   prepare:
     runs-on: ubuntu-latest
     outputs:
@@ -25,16 +21,14 @@ jobs:
           python scripts/prepare_matrix.py
           echo "matrix=$(cat stock_matrix.json)" >> $GITHUB_OUTPUT
 
-  # 2. 矩阵下载 (外层按年循环，内层按Code分片)
-  fetch-history:
+  # 2. 并发下载全量历史 (20并发)
+  fetch-full-history:
     needs: prepare
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        year: ${{ fromJson(inputs.year_list) }}
         task: ${{ fromJson(needs.prepare.outputs.matrix) }}
       fail-fast: false
-      max-parallel: 20
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -43,20 +37,21 @@ jobs:
           cache: 'pip'
       - run: pip install -r requirements.txt
       
-      - name: Fetch Part ${{ matrix.year }}
+      - name: Fetch Full History (2005-Present)
         run: |
+          # 传入 year=9999 触发脚本里的全量模式 (2005-至今)
           python scripts/fetch_worker.py \
             --index ${{ matrix.task.index }} \
             --codes '${{ toJson(matrix.task.codes) }}' \
-            --year ${{ matrix.year }}
+            --year 9999
             
       - uses: actions/upload-artifact@v4
         with:
-          name: history-${{ matrix.year }}-part-${{ matrix.task.index }}
+          name: history-part-${{ matrix.task.index }}
           path: temp_parts/*.parquet
           retention-days: 1
 
-  # 3. 板块下载 (历史)
+  # 3. 下载板块数据
   fetch-sectors:
     runs-on: ubuntu-latest
     steps:
@@ -75,13 +70,10 @@ jobs:
           name: sector-parts
           path: temp_parts/*.parquet
 
-  # 4. 按年汇总发布
-  finalize-year:
-    needs: [fetch-history, fetch-sectors]
+  # 4. 汇总、切分、发布
+  finalize:
+    needs: [fetch-full-history, fetch-sectors]
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        year: ${{ fromJson(inputs.year_list) }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -92,18 +84,20 @@ jobs:
       - name: Download Artifacts
         uses: actions/download-artifact@v4
         with:
+          # 下载所有 artifact，包括 history-part-* 和 sector-parts
+          pattern: '*'
+          merge-multiple: true
           path: all_artifacts
           
-      - name: Organize Artifacts
+      - name: Merge & Split by Year
         run: |
-          # 将 history-2023-part-* 移动到 flat folder 供脚本读取
-          find all_artifacts -name "history-${{ matrix.year }}-part-*" -exec cp {} all_artifacts/ \;
-          # 将 sector 也移动过来
-          find all_artifacts -name "sector-parts" -exec cp -r {}/* all_artifacts/ \;
+          # 传入 year=9999 触发 merge_and_push.py 里的全量切分逻辑
+          # 它会自动生成 stock_kline_2005.parquet ... stock_kline_2023.parquet
+          python scripts/merge_and_push.py --mode release --year 9999
           
-      - name: Merge & Upload Release
+      - name: Upload to Release
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          python scripts/merge_and_push.py --mode release --year ${{ matrix.year }}
+          # 上传所有生成的年份文件
           gh release upload archive output/*.parquet --clobber
