--- a/.github/workflows/fetch_history_to_release.yml
+++ b/.github/workflows/fetch_history_to_release.yml
@@ -2,10 +2,10 @@ name: Fetch Full History to Release
 
 on:
   workflow_dispatch:
-    # 不需要输入年份列表了，脚本会自动处理 2005-去年
+    # 纯手动触发，默认下载 2005-至今 的全量数据并按年切分
 
 jobs:
-  # 1. 准备分片矩阵 (20个任务)
+  # 1. 准备分片矩阵
   prepare:
     runs-on: ubuntu-latest
     outputs:
@@ -21,7 +21,7 @@ jobs:
           python scripts/prepare_matrix.py
           echo "matrix=$(cat stock_matrix.json)" >> $GITHUB_OUTPUT
 
-  # 2. 并发下载全量历史 (20并发)
+  # 2. 并发下载全量历史 (20个并发任务)
   fetch-full-history:
     needs: prepare
     runs-on: ubuntu-latest
@@ -37,9 +37,9 @@ jobs:
           cache: 'pip'
       - run: pip install -r requirements.txt
       
-      - name: Fetch Full History (2005-Present)
+      - name: Fetch Full History
         run: |
-          # 传入 year=9999 触发脚本里的全量模式 (2005-至今)
+          # --year 9999 触发全量下载模式 (2005 ~ 昨天)
           python scripts/fetch_worker.py \
             --index ${{ matrix.task.index }} \
             --codes '${{ toJson(matrix.task.codes) }}' \
@@ -51,7 +51,7 @@ jobs:
           path: temp_parts/*.parquet
           retention-days: 1
 
-  # 3. 下载板块数据
+  # 3. 下载板块全量历史
   fetch-sectors:
     runs-on: ubuntu-latest
     steps:
@@ -84,20 +84,25 @@ jobs:
       - name: Download Artifacts
         uses: actions/download-artifact@v4
         with:
-          # 下载所有 artifact，包括 history-part-* 和 sector-parts
           pattern: '*'
           merge-multiple: true
           path: all_artifacts
           
       - name: Merge & Split by Year
         run: |
-          # 传入 year=9999 触发 merge_and_push.py 里的全量切分逻辑
-          # 它会自动生成 stock_kline_2005.parquet ... stock_kline_2023.parquet
+          # --year 9999 触发 DuckDB 全量切分逻辑
+          # 它会自动生成 stock_kline_2005.parquet ... stock_kline_2025.parquet
           python scripts/merge_and_push.py --mode release --year 9999
           
       - name: Upload to Release
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          # 上传所有生成的年份文件
+          # 1. 尝试创建名为 'archive' 的 Release (如果已存在则忽略报错)
+          gh release create archive --title "Historical Archive" --notes "Full A-Share history (2005-Present)" || true
+          
+          # 2. 确保它不是 Draft 状态
+          gh release edit archive --draft=false --prerelease=false
+          
+          # 3. 上传文件 (使用 --clobber 覆盖同名文件)
           gh release upload archive output/*.parquet --clobber
