--- a/.github/workflows/daily_update_to_hf.yml
+++ b/.github/workflows/daily_update_to_hf.yml
@@ -2,11 +2,14 @@ name: Daily Update to HF (Matrix)
 
 on:
   schedule:
-    - cron: '0 18 * * *'
-  workflow_dispatch:
+    - cron: '0 18 * * *' # UTC 18:00 = 北京时间凌晨 02:00
+  workflow_dispatch:     # 允许手动点击测试
+
+permissions:
+  contents: read
 
 jobs:
-  # 1. 生成分片矩阵
+  # 1. 准备分片矩阵 (随机打乱 20 个分片)
   prepare:
     runs-on: ubuntu-latest
     outputs:
@@ -22,7 +25,7 @@ jobs:
           python scripts/prepare_matrix.py
           echo "matrix=$(cat stock_matrix.json)" >> $GITHUB_OUTPUT
 
-  # 2. 个股并行下载
+  # 2. 并发下载当年数据 (YTD模式)
   fetch-stocks:
     needs: prepare
     runs-on: ubuntu-latest
@@ -37,18 +40,20 @@ jobs:
           python-version: "3.10"
           cache: 'pip'
       - run: pip install -r requirements.txt
-      - name: Fetch Part
+      - name: Fetch Current Year Data
         run: |
+          # 不传 --year 或传 0 默认为 YTD 模式 (今年1.1~昨天)
           python scripts/fetch_worker.py \
             --index ${{ matrix.task.index }} \
             --codes '${{ toJson(matrix.task.codes) }}'
+            
       - uses: actions/upload-artifact@v4
         with:
-          name: parts-${{ matrix.task.index }}
+          name: daily-parts-${{ matrix.task.index }}
           path: temp_parts/*.parquet
           retention-days: 1
 
-  # 3. 板块下载 (单机)
+  # 3. 下载最新板块行情与成分
   fetch-sectors:
     runs-on: ubuntu-latest
     steps:
@@ -66,8 +71,9 @@ jobs:
         with:
           name: sector-parts
           path: temp_parts/*.parquet
+          retention-days: 1
 
-  # 4. 汇总与上传
+  # 4. 汇总、质检、推送到 Hugging Face
   finalize:
     needs: [fetch-stocks, fetch-sectors]
     runs-on: ubuntu-latest
@@ -78,7 +84,7 @@ jobs:
           python-version: "3.10"
       - run: pip install -r requirements.txt
       
-      - name: Download All
+      - name: Download All Artifacts
         uses: actions/download-artifact@v4
         with:
           pattern: '*'
@@ -89,8 +95,20 @@ jobs:
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
           HF_REPO: ${{ secrets.HF_REPO }}
-        run: python scripts/merge_and_push.py --mode hf
-        
-      - name: Publish QC
+        run: |
+          # mode hf 会自动调用 hf_manager 进行上传
+          python scripts/merge_and_push.py --mode hf
+          
+      - name: Upload QC Report to Artifacts
         if: always()
-        run: cat qc_summary.md >> $GITHUB_STEP_SUMMARY
+        uses: actions/upload-artifact@v4
+        with:
+          name: daily-qc-report
+          path: |
+            output/qc_report.json
+            output/qc_summary.md
+          retention-days: 3
+          
+      - name: Publish Summary
+        if: always()
+        run: cat output/qc_summary.md >> $GITHUB_STEP_SUMMARY
